# infostream-bahnapi

./: .gitignore  Dockerfile  pyproject.toml  setup.cfg
deployment/: updater_cron
frontend/: package-lock.json  package.json
frontend/src/: index.tsx
frontend/src/components/: stations.tsx
infostream_bahnapi/: __main__.py  arrivals_of_interest.txt  get_arrivals.py  gsheet_dump.py  main.py
scripts/: update_backend.sh
