[tool.poetry]
name = "infostream-bahnapi"
version = "0.1.0"
description = ""
authors = ["Benito Buchheim <github.benito.2017@buchheims.de>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
