[tool.poetry]
name = "infostream-bahnapi"
version = "0.1.0"
description = ""
authors = ["Benito Buchheim <github.benito.2017@buchheims.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pyhafas = "^0.3.0"
cachetools = "^5.0.0"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
